--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    min-height: 500px;
 }
 
 .knitwear h4 {
@@ -46,6 +47,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-color: #F6F1DE;
+    min-height: 500px;
 }
 
 @media only screen and (max-width: 800px) {
@@ -81,6 +83,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-color: #F6F1DE;
+    min-height: 500px;
 }
 
 .dress {
@@ -93,6 +96,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    min-height: 500px;
 }
 
 .dress h4 {
@@ -286,6 +290,7 @@
     margin: 3rem 0 3rem 0;
     background-color: white;
     min-width: 280px;
+    overflow: hidden;
 }
 
 .suggestions-container h2 {
@@ -415,6 +420,7 @@
     .visible1 {
         width: 200%;
         flex-wrap: wrap;
+        
     }
 
     .sug {
